derive-ex-tests/tests/compile_fail/compare_op/eq_with_parital_ord_key.stderr
error: Since `#[partial_ord(key = ...)]` was specified, the default implementation of `Eq` cannot be used.
       One of the following attributes is required.

       #[eq(key = ...)]
       #[eq(by = ...)]
       #[ord(key = ...)]
       #[ord(by = ...)]
 --> tests/compile_fail/compare_op/eq_with_partial_ord_key.rs:4:30
  |
4 | struct X(#[partial_ord(key = $.len())] String);
  |                              ^
